; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_header.c_needs_space_after.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_header.c_needs_space_after.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @needs_space_after(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %3 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %4 = call i64 @type_is_alias(%struct.TYPE_7__* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %27, label %6

6:                                                ; preds = %1
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %8 = call i32 @is_ptr(%struct.TYPE_7__* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %25, label %10

10:                                               ; preds = %6
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %12 = call i32 @is_array(%struct.TYPE_7__* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %10
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %16 = call i32 @type_array_is_decl_as_ptr(%struct.TYPE_7__* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %23

18:                                               ; preds = %14
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br label %23

23:                                               ; preds = %18, %14, %10
  %24 = phi i1 [ true, %14 ], [ true, %10 ], [ %22, %18 ]
  br label %25

25:                                               ; preds = %23, %6
  %26 = phi i1 [ false, %6 ], [ %24, %23 ]
  br label %27

27:                                               ; preds = %25, %1
  %28 = phi i1 [ true, %1 ], [ %26, %25 ]
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local i64 @type_is_alias(%struct.TYPE_7__*) #1

declare dso_local i32 @is_ptr(%struct.TYPE_7__*) #1

declare dso_local i32 @is_array(%struct.TYPE_7__*) #1

declare dso_local i32 @type_array_is_decl_as_ptr(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
